top fixes the top margin gap for fixed elements

--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ hr {
 }
 
 #header {
+    top: 0;
+    left: 0;
     width: 100%;
     position: fixed;
     background-color: #740c74;
